# triton-ext

./: .gitignore  .gitmodules  .markdownlint-cli  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  requirements.txt
backend/: CMakeLists.txt
backend/AppleGPU/: CMakeLists.txt  ExportAppleGPU.cpp  README.md  triton-ext.conf  triton-ext.toml
backend/AppleGPU/include/TritonAppleGPUToLLVM/: Passes.h  TargetInfo.h
backend/AppleGPU/include/TritonAppleGPUTransforms/: Passes.h  Passes.td
backend/AppleGPU/include/metal-ir/: AIRIntrinsics.h  BitcodeEmitter.h  BitcodeEncoding.h  IRUtil.h  KernelProfile.h  MetalConstraints.h  MetallibWriter.h  PassUtil.h  Pipeline.h  PointeeTypeMap.h  ValueEnumerator.h
backend/AppleGPU/lib/MetalIR/Bridge/: CMakeLists.txt  exports.map  metalir_bridge.cpp
backend/AppleGPU/lib/MetalIR/Serialization/: BitcodeEmitter.cpp  CMakeLists.txt  ConstantsWriter.cpp  FunctionWriter.cpp  MetadataWriter.cpp  MetallibWriter.cpp  TypeTableWriter.cpp  ValueEnumerator.cpp
backend/AppleGPU/lib/MetalIR/Transforms/: AIRSystemValues.cpp  CMakeLists.txt  DecomposeStructPhis.cpp  DeviceLoadsVolatile.cpp  InferTypedPointers.cpp  InlineNonKernel.cpp  KernelProfile.cpp  LLVMToAIRIntrinsics.cpp  NormalizeAllocas.cpp  NormalizeI1Pointers.cpp  Pipeline.cpp  PointeeTypeMap.cpp  PtrPhiToI64.cpp  PtrSelectToI64.cpp  ScalarBufferPacking.cpp
backend/AppleGPU/lib/TritonAppleGPUToLLVM/: AppleMmaLayoutConversions.cpp  ConvertTritonAppleGPUToLLVM.cpp  Dialect.cpp  DotOpToLLVM.cpp  LoadStoreToLLVM.cpp  TargetInfo.cpp
backend/AppleGPU/lib/TritonAppleGPUTransforms/: AccelerateAppleMatmul.cpp  AppleMmaGroup.cpp  CMakeLists.txt  SimplifyGatherLayout.cpp
backend/AppleGPU/llvm-metal-target/: CMakeLists.txt  README.md
backend/AppleGPU/llvm-metal-target/test/: addrspace-constant-param.ll  addrspace-threadgroup-store.ll  barrier-rename.ll  bfloat16-cast-decompose.ll  inline-non-kernel.ll  lit.local.cfg.py  llvm-to-air-intrinsics-nop.ll  llvm-to-air-intrinsics.ll  lower-fneg.ll  nan-min-max-vector-lower.ll  nan-min-max.ll  normalize-allocas-strip-disjoint.ll  tg-barrier-insert.ll  tg-global-coalesce.ll
backend/AppleGPU/llvm-metal-target/tools/: CMakeLists.txt
backend/AppleGPU/llvm-metal-target/tools/metal-llc/: metal-llc.cpp
backend/AppleGPU/metal-ir-pipeline/: CMakeLists.txt  README.md
backend/AppleGPU/metal-ir-pipeline/include/metal-ir/: AIRIntrinsics.h  BitcodeEmitter.h  BitcodeEncoding.h  IRUtil.h  KernelProfile.h  MetalConstraints.h  MetallibWriter.h  PassUtil.h  Pipeline.h  PointeeTypeMap.h  ValueEnumerator.h
backend/AppleGPU/metal-ir-pipeline/lib/Bridge/: CMakeLists.txt  metalir_bridge.cpp
backend/AppleGPU/metal-ir-pipeline/lib/Serialization/: BitcodeEmitter.cpp  CMakeLists.txt  ConstantsWriter.cpp  FunctionWriter.cpp  MetadataWriter.cpp  MetallibWriter.cpp  TypeTableWriter.cpp  ValueEnumerator.cpp
backend/AppleGPU/metal-ir-pipeline/lib/Transforms/: AIRSystemValues.cpp  AsyncEventToAlloca.cpp  BFloat16CastDecompose.cpp  BarrierRename.cpp  BitcastZeroInit.cpp  CMakeLists.txt  DecomposeStructPhis.cpp  DeviceLoadsVolatile.cpp  (+22 more)
backend/AppleGPU/metal-ir-pipeline/scripts/: bisect_ir.py  bisect_passes.sh  test_pso.py
backend/AppleGPU/metal-ir-pipeline/test/: CMakeLists.txt  gpu_test.m
backend/AppleGPU/metal-ir-pipeline/tools/: CMakeLists.txt  metal-ir-opt.cpp
backend/AppleGPU/python/: pyproject.toml  setup.py
backend/AppleGPU/python/triton_apple_backend/: __init__.py  compiler.py  driver.py  libdevice_stubs.py  metal_utils.m
backend/AppleGPU/test/: convert-make-range.mlir  lit.local.cfg.py
extensions/: CMakeLists.txt
extensions/utlx/: CMakeLists.txt  README.md  triton-ext.conf  triton-ext.toml  uTLXConversionPatterns.cpp  uTLXPlugin.cpp
extensions/utlx/ops/: NewOps.h
extensions/utlx/passes/: Passes.h
extensions/utlx/passes/amd/: BarrierOpConversion.cpp  LowerBarrierOps.cpp
extensions/utlx/passes/nvidia/: PingPong.cpp  PruneUnusedBarriers.cpp
extensions/utlx/python/utlx/: __init__.py
extensions/utlx/python/utlx_plugin/: __init__.py  async_task_utils.py  barrier.py  custom_stages.py  dynamic_launch.py  mem_ops.py  mma_ops.py  mxfp8_utils.py  types.py  utility.py  warp_ops.py
extensions/utlx/test/: conftest.py  test_alloc_barriers.py  test_amd_gemm_pipelined.py  test_barriers.py  test_correctness.py  test_custom_stages.py  test_local_alloc.py  test_mem_ops.py  test_storage_alias.py  test_tlx.py  test_types.py
extensions/utlx/tlx/: README.md  run_all.sh
extensions/utlx/tlx/dialect/: CMakeLists.txt  triton_tlx.cc
extensions/utlx/tlx/doc/: PlaceholderLayouts.md  StorageAliasSpecAndSetBufferOverlap.md  tlx_barriers.md
extensions/utlx/tlx/tutorials/: amd-gemm-pipelined_test.py  blackwell-cross-attention.py  blackwell-gdpa.py  blackwell-grouped-gemm_test.py  blackwell-multi-cta-layernorm_test.py  blackwell_fa_ws.py  blackwell_fa_ws_persistent.py  blackwell_fa_ws_pipelined.py  blackwell_fa_ws_pipelined_persistent.py  blackwell_fa_ws_pipelined_persistent_mxfp8.py  blackwell_gemm_2cta.py  blackwell_gemm_clc.py  blackwell_gemm_pipelined.py  blackwell_gemm_ws.py  hopper-persistent-gemm-ws-cooperative.py  hopper-persistent-gemm-ws-pingpong.py  hopper_fa_ws.py  hopper_fa_ws_pipelined.py  hopper_fa_ws_pipelined_pingpong.py  hopper_fa_ws_pipelined_pingpong_persistent.py  hopper_gemm_pipelined.py  hopper_gemm_ws.py  vector-add2.py
llvm-metal-target/: CMakeLists.txt  MIRROR_MANIFEST.txt  README.md  STAGE_2_NOTES.md
llvm-metal-target/test/: CMakeLists.txt  addrspace-device-load.ll  air-system-values.ll  barrier-rename-nop.ll  bfloat16-cast-decompose-uitofp.ll  datalayout.ll  device-loads-volatile.ll  emit-metallib.ll  inline-non-kernel-no-helper.ll  lower-atomic-rmw-and-or.ll  lower-atomic-rmw.ll  lower-fneg-nop.ll  nan-min-max-vector.ll  normalize-allocas.ll  prepare.ll  scalar-buffer-packing.ll  scalar-store-guard.ll  split-i64-shuffle-i32-nop.ll  split-i64-shuffle.ll  system-values-post-packing.ll  target-smoke.ll  tg-global-gep-rewrite.ll
llvm-metal-target/tools/metal-llc/: CMakeLists.txt  metal-llc.cpp
(+228 files in other folders)
